Added text on the card

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
                     Cool Team A
                 </div>
                 <div class="card-body text-dark">
-
+                    Yeah! We're good!
                 </div>
             </div>
         </div>
